--- a/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
+++ b/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
@@ -5,3 +5,21 @@
 
 <h2>Index</h2>
 
+<div class="container">
+    <h1>Group By v2</h1>
+    <table id="table"
+           data-toggle="table"
+           data-group-by="true"
+           data-group-by-field="shape"
+           data-url="/ComputerCategory/GetJsonData">
+        <thead>
+            <tr>
+                <th data-field="shape">Shape</th>
+                <th data-field="color">Color</th>
+                <th data-field="area">Area</th>
+            </tr>
+        </thead>
+    </table>
+</div>
+
+      
