--- a/HardwareQuotationInvoice/Views/Shared/_Layout.cshtml
+++ b/HardwareQuotationInvoice/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+   
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -37,8 +39,11 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jquery")   
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/bootstrap-table")     
+    @Scripts.Render("~/bundles/group-by-v2")  
+   
     @RenderSection("scripts", required: false)
 </body>
 </html>
