--- a/HardwareQuotationInvoice/Views/Shared/_Layout.cshtml
+++ b/HardwareQuotationInvoice/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/css") 
+    @Styles.Render("~/Content/bootstrap-table")
     @Scripts.Render("~/bundles/modernizr")
 
     @Scripts.Render("~/bundles/jquery")
@@ -12,7 +13,7 @@
     @Scripts.Render("~/bundles/bootstrap-table")
     @Scripts.Render("~/bundles/group-by-v2")
 
-    
+    @Scripts.Render("~/bundles/editable")
 
 </head>
 <body>
@@ -40,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Hui Qing All Rights Reserved</p>
         </footer>
     </div>
 
