--- a/HardwareQuotationInvoice/Views/Shared/_Layout.cshtml
+++ b/HardwareQuotationInvoice/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     @Scripts.Render("~/bundles/group-by-v2")
 
     @Scripts.Render("~/bundles/editable")
-
+    @Scripts.Render("~/bundles/jsexport")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
