Adjust some files

--- a/HardwareQuotationInvoice/Views/Shared/_QuotationLayout.cshtml
+++ b/HardwareQuotationInvoice/Views/Shared/_QuotationLayout.cshtml
@@ -7,6 +7,14 @@
     @Styles.Render("~/Content/css") 
     @Styles.Render("~/Content/bootstrap-table")
     @Scripts.Render("~/bundles/modernizr")
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/bootstrap-table")
+    @Scripts.Render("~/bundles/group-by-v2")
+
+    @Scripts.Render("~/bundles/editable")
+    @Scripts.Render("~/bundles/jsexport")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
