--- a/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
+++ b/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
@@ -5,11 +5,15 @@
 
 <div class="container">
    
+    <div id="toolbar">
+        <button id="btnNew" class="btn btn-default">New</button>       
+        <button id="btnRemove" class="btn btn-default">Remove</button>
+    </div>
 
-    <table id="divQuotationGrid" >
+    <table id="divComputerCategoryGrid" >
     </table>
 
-    @Scripts.Render("~/bundles/ConfigQuotationDisplay")
+    @Scripts.Render("~/bundles/ComputerCategory")
     
 </div>
 
