--- a/HardwareQuotationInvoice/Views/Shared/_Layout.cshtml
+++ b/HardwareQuotationInvoice/Views/Shared/_Layout.cshtml
@@ -7,6 +7,10 @@
     @Styles.Render("~/Content/css") 
     @Styles.Render("~/Content/bootstrap-table")
     @Scripts.Render("~/bundles/modernizr")
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/bootstrap-table")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
