--- a/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
+++ b/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
    
     <div id="toolbar">
-        <button id="btnNew" class="btn btn-default">New</button>       
+        <button id="btnNew" type="button" class="btn btn-default" data-toggle="modal" data-target="#myModal">New</button>       
         <button id="btnRemove" class="btn btn-default">Remove</button>
     </div>
 
@@ -14,7 +14,32 @@
     </table>
 
     @Scripts.Render("~/bundles/ComputerCategory")
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">新建电脑类别</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon1">类别名称</span>
+                        <input type="text" class="form-control" placeholder="台式机，笔记本等" aria-describedby="basic-addon1">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </div>
+
+
 
       
