Add update feature

--- a/HardwareQuotationInvoice/Views/Shared/_Layout1.cshtml
+++ b/HardwareQuotationInvoice/Views/Shared/_Layout1.cshtml
@@ -6,14 +6,15 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css") 
     @Styles.Render("~/Content/bootstrap-table")
-    @Styles.Render("~/Content/ClickEdit")
-
     @Scripts.Render("~/bundles/modernizr")
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/bootstrap-table") 
-     @Scripts.Render("~/bundles/ClickEdit")
+    @Scripts.Render("~/bundles/bootstrap-table")
+    @Scripts.Render("~/bundles/group-by-v2")
+
+    @Scripts.Render("~/bundles/editable")
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
