--- a/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
+++ b/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
@@ -17,7 +17,7 @@
 
 
     <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" data-backdrop="static" aria-labelledby="myModalLabel">
         <div class="modal-dialog modal-sm" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -32,10 +32,20 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button id="btnSaveCategory" type="button" class="btn btn-primary" data-loading-text="Loading..."  onclick="UpdateComputerCategory();">Save changes</button>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div id="modelLoading" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" data-backdrop="static" aria-labelledby="mySmallModalLabel">
+   
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                        <span class="sr-only">100% Complete</span>
+                    </div>
+                </div>
+        
     </div>
     
 </div>
