--- a/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
+++ b/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
@@ -25,10 +25,24 @@
                     <h4 class="modal-title" id="myModalLabel">新建电脑类别</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="input-group">
-                        <span class="input-group-addon" id="basic-addon1">类别名称</span>
-                        <input type="text" class="form-control" placeholder="台式机，笔记本等" aria-describedby="basic-addon1">
+
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">类别名称</label>
+                        <input id="txtCategoryName" type="text" class="form-control" placeholder="台式机，笔记本等" >
                     </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">优  先  级</label>
+                        <input type="text" id="txtPriority" class="form-control" placeholder="数字1，2，3。。。">
+                    </div>
+
+                    @*<div class="input-group">
+                        <span class="input-group-addon" id="basic-addon1">类别名称</span>
+                        <input id="txtCategoryName" type="text" class="form-control" placeholder="台式机，笔记本等" aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon" id="basic-addon2">优  先  级</span>
+                        <input type="text" id="txtPriority" class="form-control" placeholder="数字1，2，3。。。" aria-describedby="basic-addon2">
+                    </div>*@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
