Update featurre, color it

--- a/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
+++ b/HardwareQuotationInvoice/Views/ComputerCategory/Index.cshtml
@@ -31,7 +31,7 @@
                         <input id="txtCategoryName" type="text" class="form-control" placeholder="台式机，笔记本等" >
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">优  先  级</label>
+                        <label for="exampleInputPassword1">优先级</label>
                         <input type="text" id="txtPriority" class="form-control" placeholder="数字1，2，3。。。">
                     </div>
 
@@ -46,7 +46,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button id="btnSaveCategory" type="button" class="btn btn-primary" data-loading-text="Loading..."  onclick="UpdateComputerCategory();">Save changes</button>
+                    <button id="btnSaveCategory" type="button" class="btn btn-primary" data-loading-text="Loading..."  onclick="InsertComputerCategory();">Save changes</button>
                 </div>
             </div>
         </div>
